# ros2_ws

./: LICENSE
my_robot/: package.xml
my_robot/launch/: full_mapping.launch.py
my_robot/my_robot/perception/: README.md
my_robot_nav/: README.md  package.xml  setup.cfg  setup.py
my_robot_nav/config/: nav2_params.yaml
my_robot_nav/launch/: localization.launch.py  navigation.launch.py  slam_cartographer_lidar.launch.py  slam_gmapping_lidar.launch.py  slam_hector_lidar.launch.py  slam_rtabmap_lidar.launch.py  slam_slamtoolbox_lidar.launch.py
src/OpenAI/: Azu.py  README.md
src/my_robot/my_robot/configs/: rplidar.yaml
src/my_robot/my_robot/nodes/: h105_bt_teleop_rs485.py  toc_do_2motors.py
