<?xml version="1.0"?>
<package format="3">
<name>my_robot</name>
<version>0.0.1</version>
<description>Gói ROS 2 xuất bản RGBD + IMU + LiDAR + (tuỳ chọn) YOLO và launch RTAB-Map.</description>
<maintainer email="">you</maintainer>
<license>MIT</license>


<buildtool_depend>ament_python</buildtool_depend>


<exec_depend>rclpy</exec_depend>
<exec_depend>sensor_msgs</exec_depend>
<exec_depend>geometry_msgs</exec_depend>
<exec_depend>nav_msgs</exec_depend>
<exec_depend>std_msgs</exec_depend>
<exec_depend>tf2_ros</exec_depend>
<exec_depend>tf_transformations</exec_depend>
<exec_depend>message_filters</exec_depend>
<exec_depend>python3-numpy</exec_depend>


<exec_depend>pyrealsense2</exec_depend>
<exec_depend>ultralytics</exec_depend>

  <!-- test (giữ nguyên/tuỳ chọn) -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
