<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_nav</name>
  <version>0.0.1</version>
  <description>Navigation stack for my robot</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_common</depend>
  <depend>navigation2</depend>
  <!-- Sensors + TF -->
  <depend>my_robot</depend>
  <depend>tf2_ros</depend>

  <!-- SLAM backends (LiDAR) -->
  <depend>rtabmap_slam</depend>
  <depend>cartographer_ros</depend>
  <depend>slam_toolbox</depend>
  <depend>hector_mapping</depend>
  <depend>slam_gmapping</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
